cloudformation.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: CFN Template for a Laravel Sail ECS application.

Parameters:
  EnvS3Bucket:
    Type: String
    Description: Your S3 bucket name contains env file.
    Default: ""
  CertificateArn:
    Type: String
    Description: Certificate ARN.
    Default: ""
  KeyName:
    Type: String
    Description: SSH Key Name.
    Default: ""
  ServiceTaskDesiredCount:
    Type: Number
    Description: Specifies the number of task to launch. 0 is for initial phrase.
    Default: "0"
  VpcAvailabilityZones:
    Type: CommaDelimitedList
    Description: >
      Specifies a comma-separated list of 3 VPC Availability Zones for
      the creation of new subnets. These zones must have the available status.
    Default: "ap-southeast-1a,ap-southeast-1b"
  DbMasterUsername:
    Type: String
    Description: The master user name for the DB instance.
  DbMasterPassword:
    Type: String
    Description: >
      The password for the master user.
      The password can include any printable ASCII character except "/", """, or "@".

Conditions:
  CreateHttpsListener: !Not [!Equals [!Ref CertificateArn, ""]]
  HasKeyName: !Not [!Equals [!Ref KeyName, ""]]

Resources:
  # ECR Private Repository
  EcrPrivateRepository:
    Type: AWS::ECR::Repository
    Properties:
      RepositoryName: !Sub "${AWS::StackName}"
      LifecyclePolicy:
        LifecyclePolicyText: |
          {"rules":[{"rulePriority":1,"description":"Remove untagged images","selection":{"tagStatus":"untagged","countType":"imageCountMoreThan","countNumber":1},"action":{"type":"expire"}}]}

  # ECS
  ## Cluster
  EcsCluster:
    Type: AWS::ECS::Cluster
    Properties:
      ClusterName: !Sub "${AWS::StackName}-cluster"
      ClusterSettings:
        - Name: containerInsights
          Value: disabled

  ## Task Definition
  EcsTaskDefinition:
    Type: AWS::ECS::TaskDefinition
    Properties:
      Family: !Sub "${AWS::StackName}-task-definition"
      ContainerDefinitions:
        - Name: !Sub "${AWS::StackName}-container"
          Image:
            !Join [":", [!GetAtt EcrPrivateRepository.RepositoryUri, "main"]]
          PortMappings:
            - ContainerPort: 80
              HostPort: 0
              Protocol: tcp
          EnvironmentFiles:
            - Type: s3
              Value: !Sub "arn:aws:s3:::${EnvS3Bucket}/${AWS::StackName}.env"
      ExecutionRoleArn: !GetAtt EcsTaskDefinitionExecutionRole.Arn
      Memory: "128"
      RequiresCompatibilities:
        - EC2

  EcsTaskDefinitionExecutionRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs-tasks.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Description: "Allows ECS tasks to call AWS services on your behalf."
      Policies:
        - PolicyName: policy-ecs-task-execution
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "ecr:GetAuthorizationToken"
                  - "ecr:BatchCheckLayerAvailability"
                  - "ecr:GetDownloadUrlForLayer"
                  - "ecr:BatchGetImage"
                  - "logs:CreateLogStream"
                  - "logs:PutLogEvents"
                Resource: "*"
        - PolicyName: policy-s3-read-env
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "s3:GetObject"
                Resource: !Sub "arn:aws:s3:::${EnvS3Bucket}/${AWS::StackName}.env"
        - PolicyName: policy-s3-read-env-bucket
          PolicyDocument:
            Version: "2012-10-17"
            Statement:
              - Effect: Allow
                Action:
                  - "s3:GetBucketLocation"
                Resource: !Sub "arn:aws:s3:::${EnvS3Bucket}"

  ## Service
  EcsService:
    Type: AWS::ECS::Service
    Properties:
      ServiceName: !Sub "${AWS::StackName}-service"
      Cluster: !Ref EcsCluster
      LaunchType: EC2
      TaskDefinition: !Ref EcsTaskDefinition
      DesiredCount: !Ref ServiceTaskDesiredCount
      LoadBalancers:
        - ContainerName: !Sub "${AWS::StackName}-container"
          ContainerPort: 80
          TargetGroupArn: !Ref TargetGroup
      Role: !Ref EcsRole

  EcsRole:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ecs.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: ec2-container-service-role
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  [
                    "ec2:AuthorizeSecurityGroupIngress",
                    "ec2:Describe*",
                    "elasticloadbalancing:DeregisterInstancesFromLoadBalancer",
                    "elasticloadbalancing:DeregisterTargets",
                    "elasticloadbalancing:Describe*",
                    "elasticloadbalancing:RegisterInstancesWithLoadBalancer",
                    "elasticloadbalancing:RegisterTargets",
                  ]
                Resource: "*"

  # Application Load Balancer
  TargetGroup:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: !Sub "${AWS::StackName}-target-group"
      VpcId: !Ref TheVpc
      Protocol: HTTP
      Port: 80
      TargetType: instance
    DependsOn:
      - ApplicationLoadBalancer

  ApplicationLoadBalancerHttpListener:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  ApplicationLoadBalancerHttpsListener:
    Condition: CreateHttpsListener
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref ApplicationLoadBalancer
      Port: 443
      Protocol: HTTPS
      Certificates:
        - CertificateArn: !Ref CertificateArn
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref TargetGroup

  ApplicationLoadBalancer:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: !Sub "${AWS::StackName}-alb"
      SecurityGroups:
        - !Ref AlbSecurityGroup
      Subnets:
        - !Ref Subnet1
        - !Ref Subnet2

  AlbSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${AWS::StackName} SG for ALB"
      GroupDescription: Allow http, https to client host
      VpcId: !Ref TheVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIpv6: ::/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIpv6: ::/0

  # EC2 Instance
  Ec2SecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupName: !Sub "${AWS::StackName} SG for EC2"
      GroupDescription: Allow access from ALB
      VpcId: !Ref TheVpc
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 0
          ToPort: 65535
          SourceSecurityGroupId: !Ref AlbSecurityGroup
        - IpProtocol: tcp
          FromPort: 6379 # Redis port
          ToPort: 6379
          CidrIp: 0.0.0.0/0

  EcsInstanceLc:
    Type: AWS::AutoScaling::LaunchConfiguration
    Properties:
      ImageId: "ami-039ec8fc674496137"
      InstanceType: "t2.micro"
      AssociatePublicIpAddress: true
      IamInstanceProfile: !Ref Ec2InstanceProfile
      KeyName: !If [HasKeyName, !Ref KeyName, !Ref "AWS::NoValue"]
      SecurityGroups:
        - !Ref Ec2SecurityGroup
      BlockDeviceMappings:
        - DeviceName: "/dev/xvda"
          Ebs:
            VolumeSize: 30
            VolumeType: gp2
      UserData:
        Fn::Base64: !Sub |
          #!/bin/bash
          echo ECS_CLUSTER=${AWS::StackName}-cluster >> /etc/ecs/ecs.config;echo ECS_BACKEND_HOST= >> /etc/ecs/ecs.config;

  EcsInstanceAsg:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      VPCZoneIdentifier:
        - !Ref Subnet1
        - !Ref Subnet2
      LaunchConfigurationName: !Ref EcsInstanceLc
      MinSize: "0"
      MaxSize: "1"
      DesiredCapacity: "1"
      TargetGroupARNs:
        - !Ref TargetGroup
      Tags:
        - Key: Name
          Value: !Sub "ECS Instance - ${AWS::StackName}"
          PropagateAtLaunch: true
        - Key: Description
          Value: "This instance is the part of the Auto Scaling group which was created through ECS Console"
          PropagateAtLaunch: true

  Ec2Role:
    Type: AWS::IAM::Role
    Properties:
      AssumeRolePolicyDocument:
        Statement:
          - Effect: Allow
            Principal:
              Service:
                - ec2.amazonaws.com
            Action:
              - "sts:AssumeRole"
      Policies:
        - PolicyName: ecs-service
          PolicyDocument:
            Statement:
              - Effect: Allow
                Action:
                  [
                    "ec2:DescribeTags",
                    "ecs:CreateCluster",
                    "ecs:DeregisterContainerInstance",
                    "ecs:DiscoverPollEndpoint",
                    "ecs:Poll",
                    "ecs:RegisterContainerInstance",
                    "ecs:StartTelemetrySession",
                    "ecs:UpdateContainerInstancesState",
                    "ecs:Submit*",
                    "ecr:GetAuthorizationToken",
                    "ecr:BatchCheckLayerAvailability",
                    "ecr:GetDownloadUrlForLayer",
                    "ecr:BatchGetImage",
                    "logs:CreateLogStream",
                    "logs:PutLogEvents",
                  ]
                Resource: "*"

  Ec2InstanceProfile:
    Type: AWS::IAM::InstanceProfile
    Properties:
      Path: /
      Roles:
        - !Ref Ec2Role

  # VPC zone
  TheVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/16
      EnableDnsSupport: true
      EnableDnsHostnames: true
      InstanceTenancy: default
      Tags:
        - Key: Name
          Value: !Sub "VPC for ${AWS::StackName}"
  Subnet1:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TheVpc
      CidrBlock: 10.0.0.0/24
      AvailabilityZone: !Select [0, !Ref VpcAvailabilityZones]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "Subnet 1 for ${AWS::StackName}"
  Subnet2:
    Type: AWS::EC2::Subnet
    Properties:
      VpcId: !Ref TheVpc
      CidrBlock: 10.0.1.0/24
      AvailabilityZone: !Select [1, !Ref VpcAvailabilityZones]
      MapPublicIpOnLaunch: true
      Tags:
        - Key: Name
          Value: !Sub "Subnet 2 for ${AWS::StackName}"
  InternetGateway:
    Type: AWS::EC2::InternetGateway
    Properties:
      Tags:
        - Key: Name
          Value: !Sub "Internet Gateway for ${AWS::StackName}"
  AttachGateway:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      VpcId: !Ref TheVpc
      InternetGatewayId: !Ref InternetGateway
  RouteViaIgw:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !Ref TheVpc
      Tags:
        - Key: Name
          Value: !Sub "Route Table for ${AWS::StackName}"
  PublicRouteViaIgw:
    Type: AWS::EC2::Route
    DependsOn: AttachGateway
    Properties:
      RouteTableId: !Ref RouteViaIgw
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref InternetGateway
  PubSubnet1RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet1
      RouteTableId: !Ref RouteViaIgw
  PubSubnet2RouteTableAssociation:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      SubnetId: !Ref Subnet2
      RouteTableId: !Ref RouteViaIgw

  # S3
  S3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: !Sub "bucket-${AWS::StackName}"
      AccessControl: PublicRead
      CorsConfiguration:
        CorsRules:
          - AllowedHeaders:
              - '*'
            AllowedMethods:
              - GET
            AllowedOrigins:
              - '*'
            ExposedHeaders:
              - Date
            Id: myCORSRuleId1
            MaxAge: 3600
      
  S3BucketPolicy:
    Type: AWS::S3::BucketPolicy
    Properties:
      Bucket: !Ref S3Bucket
      PolicyDocument:
        Version: 2012-10-17
        Statement:
          - Action:
              - s3:GetObject
            Effect: Allow
            Resource: !Sub "arn:aws:s3:::${S3Bucket}/*"
            Principal: '*'

  # RDS
  RdsDbInstance:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: !Ref AWS::StackName
      DBInstanceClass: "db.t2.micro"
      Engine: mysql
      MasterUsername: !Ref DbMasterUsername
      MasterUserPassword: !Ref DbMasterPassword
      AllocatedStorage: 20
      DBSubnetGroupName: !Ref RdsDBSubnetGroup
      DBSecurityGroups:
        - !Ref RdsDbSecurityGroup

  RdsDbSecurityGroup:
    Type: AWS::RDS::DBSecurityGroup
    Properties:
      GroupDescription: !Sub "DB Security group for ${AWS::StackName}"
      EC2VpcId: !Ref TheVpc
      DBSecurityGroupIngress:
        - EC2SecurityGroupId: !GetAtt Ec2SecurityGroup.GroupId
      Tags:
        - Key: Name
          Value: !Sub "RDS ${AWS::StackName}"

  RdsDBSubnetGroup:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: !Sub "DB Subnet group for ${AWS::StackName}"
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

  # Redis
  RedisCluster:
    Type: AWS::ElastiCache::CacheCluster
    Properties:
      ClusterName: !Ref AWS::StackName
      CacheNodeType: "cache.t2.micro"
      Engine: redis
      NumCacheNodes: 1
      CacheSubnetGroupName: !Ref RedisSubnetGroup
      VpcSecurityGroupIds:
        - !Ref Ec2SecurityGroup

  RedisSubnetGroup:
    Type: AWS::ElastiCache::SubnetGroup
    Properties:
      CacheSubnetGroupName: !Sub "redis-${AWS::StackName}"
      Description: !Sub "Redis Subnet group for ${AWS::StackName}"
      SubnetIds:
        - !Ref Subnet1
        - !Ref Subnet2

Outputs:
  AppUrl:
    Description: The main url for your app behind load balancer.
    Value: !GetAtt ApplicationLoadBalancer.DNSName

  DatabaseUrl:
    Description: The connection endpoint for the database.
    Value: !GetAtt RdsDbInstance.Endpoint.Address

  RedisUrl:
    Description: The DNS address of the configuration endpoint for the Redis cache cluster.
    Value: !GetAtt RedisCluster.RedisEndpoint.Address

  S3BucketName:
    Description: The S3 bucket name.
    Value: !Ref S3Bucket

  # Export
  EcsCluster:
    Value: !Ref EcsCluster
    Export:
      Name: !Sub "${AWS::StackName}-EcsCluster"

  EcsRole:
    Value: !Ref EcsRole
    Export:
      Name: !Sub "${AWS::StackName}-EcsRole"

  AlbSecurityGroup:
    Value: !Ref AlbSecurityGroup
    Export:
      Name: !Sub "${AWS::StackName}-AlbSecurityGroup"

  TargetGroup:
    Value: !Ref TargetGroup
    Export:
      Name: !Sub "${AWS::StackName}-TargetGroup"

  TheVpc:
    Value: !Ref TheVpc
    Export:
      Name: !Sub "${AWS::StackName}-TheVpc"

  Subnet1:
    Value: !Ref Subnet1
    Export:
      Name: !Sub "${AWS::StackName}-Subnet1"

  Subnet2:
    Value: !Ref Subnet2
    Export:
      Name: !Sub "${AWS::StackName}-Subnet2"
